force-app/main/default/objects/Payment_Link_Metadata_Field__mdt/Payment_Link_Metadata_Field__mdt.object-meta.xml
<CustomObject>
    <label>Payment Link Metadata Field</label>
    <pluralLabel>Payment Link Metadata Fields</pluralLabel>
</CustomObject>