force-app/main/default/objects/Payment_Link_Metadata_Field__mdt/fields/Workspace__c.field-meta.xml
<CustomField>
    <fullName>Workspace__c</fullName>
    <label>Workspace</label>
    <length>80</length>
    <type>Text</type>
</CustomField>