force-app/main/default/objects/Payment_Link_Metadata_Field__mdt/fields/Xml_Tag__c.field-meta.xml
<CustomField>
    <fullName>Xml_Tag__c</fullName>
    <label>XML Tag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>